--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3auth/web3auth": "^0.11.0-alpha.0",
     "magic-sdk": "^8.1.1",
@@ -16,7 +17,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-moralis": "^1.3.5"
+    "react-moralis": "^1.3.5",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.32",
