--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3auth/web3auth": "^0.11.0-alpha.0",
