--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3auth/web3auth": "^0.11.0-alpha.0",
+    "ethers": "^5.6.6",
     "magic-sdk": "^8.1.1",
     "moralis": "^1.7.0",
     "next": "12.1.6",
