--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "liquidwork-frontend",
+  "name": "lw-frontend",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,10 +12,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
-    "@walletconnect/web3-provider": "^1.7.8",
-    "@web3auth/web3auth": "^0.11.0-alpha.0",
-    "ethers": "^5.6.6",
-    "magic-sdk": "^8.1.1",
+    "ethers": "^5.6.7",
     "moralis": "^1.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -25,10 +21,10 @@
     "react-redux": "^8.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.32",
+    "@types/node": "17.0.35",
     "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
-    "eslint": "8.15.0",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
   }
