--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.0.0",
     "ethers": "^5.6.7",
+    "magic-sdk": "^8.1.1",
     "moralis": "^1.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
