more balances, maticX

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_MORALIS_SERVER_URL=abc123
 NEXT_PUBLIC_MORALIS_APP_ID=abc123
+NEXT_PUBLIC_NETWORK_NAME=mumbai
+NEXT_PUBLIC_LIQUID_WORK_SC=0x2d4CBabf31B2310fC54351b61e9190174F2070Dd
