--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_MORALIS_SERVER_URL=abc123
 NEXT_PUBLIC_MORALIS_APP_ID=abc123
 NEXT_PUBLIC_NETWORK_NAME=mumbai
 NEXT_PUBLIC_LIQUID_WORK_SC=0x2d4CBabf31B2310fC54351b61e9190174F2070Dd
+NEXT_PUBLIC_MATICX_ADDRESS=0x96b82b65acf7072efeb00502f45757f254c2a0d4
